--- a/views/index.html
+++ b/views/index.html
@@ -5,40 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../public/stylesheets/header.css">
+    <title>Latech</title>
 </head>
 
 <body>
     <header>
-        <div>
+        <div class="main-menu">
             <img src="../public/images/logo_latech_final.png" alt="logo-latech">
-            <form id="search-form" action="" method="get"> <input type="text" name="q"
-                    placeholder="O que você está procurando?" autocomplete="off" value="">
-                <button type="submit">Buscar
-                </button>
-            </form>
+            <div class="search-bar">
+                <form id="search-form" action="" method="get"> <input type="text" name="q"
+                        placeholder="O que você está procurando?" autocomplete="off" value="">
+                    <button type="submit">Buscar
+                    </button>
+                </form>
+            </div>
             <nav class="main-navbar">
                 <ul class="left-navbar">
                     <li><a href="/products">Produtos</a></li>
                     <li><a href="/products/offer">Ofertas</a></li>
                     <li><a href="#">Sobre nós</a></li>
-                </ul>
-                <ul class="left-navbar">
-                    <li><a href="/user/login">Login</a></li>
-                    <li><a href="#">Carrinho</a></li>
+                    <li><a href="/user/login">Login <img src="../public/images/user-login.svg" alt=""></a></li>
+                    <li><a href="#">Carrinho <img src="../public/images/shopping-cart.svg" alt=""></a></li>
                 </ul>
             </nav>
         </div>
         <div>
             <div>
-                <img src="" alt="">
+                <img src="../public/images/banner1.png" alt="">
             </div>
             <div>
                 <ul class="banner-navbar">
-                    <li><a href="#">Notebook</a></li>
-                    <li><a href="#">Desktop</a></li>
-                    <li><a href="#">Celulares</a></li>
-                    <li><a href="#">Acessórios</a></li>
+                    <li><a href="#">Notebook <img src="../public/images/computer.svg" alt=""></a></li>
+                    <li><a href="#">Desktop <img src="../public/images/desktop.svg" alt=""></a></li>
+                    <li><a href="#">Celulares <img src="../public/images/smartphone.svg" alt=""></a></li>
+                    <li><a href="#">Acessórios <img src="../public/images/accesories.svg" alt=""></a></li>
                 </ul>
             </div>
         </div>
