--- a/views/index.html
+++ b/views/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/stylesheets/header.css">
+    <link rel="stylesheet" href="../public/stylesheets/style.css">
     <title>Latech</title>
 </head>
 
 <body>
     <header>
         <div class="main-menu">
-            <img src="../public/images/logo_latech_final.png" alt="logo-latech">
+            <img src="../public/img/logo_latech_final.png" alt="logo-latech">
             <div class="search-bar">
                 <form id="search-form" action="" method="get"> <input type="text" name="q"
                         placeholder="O que você está procurando?" autocomplete="off" value="">
@@ -25,21 +25,21 @@
                     <li><a href="/products">Produtos</a></li>
                     <li><a href="/products/offer">Ofertas</a></li>
                     <li><a href="#">Sobre nós</a></li>
-                    <li><a href="/user/login">Login <img src="../public/images/user-login.svg" alt=""></a></li>
-                    <li><a href="#">Carrinho <img src="../public/images/shopping-cart.svg" alt=""></a></li>
+                    <li><a href="/user/login">Login <img src="../public/img/user-login.svg" alt=""></a></li>
+                    <li><a href="#">Carrinho <img src="../public/img/shopping-cart.svg" alt=""></a></li>
                 </ul>
             </nav>
         </div>
         <div>
-            <div>
-                <img src="../public/images/banner1.png" alt="">
+            <div id="main-banner">
+                <img src="../public/img/banner1.png" alt="">
             </div>
             <div>
                 <ul class="banner-navbar">
-                    <li><a href="#">Notebook <img src="../public/images/computer.svg" alt=""></a></li>
-                    <li><a href="#">Desktop <img src="../public/images/desktop.svg" alt=""></a></li>
-                    <li><a href="#">Celulares <img src="../public/images/smartphone.svg" alt=""></a></li>
-                    <li><a href="#">Acessórios <img src="../public/images/accesories.svg" alt=""></a></li>
+                    <li><a href="#">Notebook <img src="../public/img/computer.svg" alt=""></a></li>
+                    <li><a href="#">Desktop <img src="../public/img/desktop.svg" alt=""></a></li>
+                    <li><a href="#">Celulares <img src="../public/img/smartphone.svg" alt=""></a></li>
+                    <li><a href="#">Acessórios <img src="../public/img/accesories.svg" alt=""></a></li>
                 </ul>
             </div>
         </div>
