--- a/views/home.html
+++ b/views/home.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/stylesheets/home.css">
     <title>Home</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,300;1,500;1,600;1,700&family=Rajdhani:wght@400;600;700&display=swap');
+    </style>
 </head>
+
 <body>
     <section class="menu-home">
         <div class="menu-produtos">
-            <img src="../public/images/4-notebook.png" alt="Imagem de notebook">
+            <img src="../public/imgHome/4-notebook.png" alt="Imagem de notebook">
             <a href="">Notebook</a>
         </div>
         <div class="menu-produtos">
-            <img src="../public/images/1-desktop.png" alt="Imagem de desktop">
+            <img src="../public/imgHome/1-desktop.png" alt="Imagem de desktop">
             <a href="">Desktop</a>
         </div>
         <div class="menu-produtos">
-            <img src="../public/images/3-telefone.png" alt="Imagem de celular">
+            <img src="../public/imgHome/3-telefone.png" alt="Imagem de celular">
             <a href="">Celulares</a>
         </div>
         <div class="menu-produtos">
-            <img src="../public/images/2-phoneouvido.png" alt="Imagem de phone de ouvido">
+            <img src="../public/imgHome/2-phoneouvido.png" alt="Imagem de phone de ouvido">
             <a href="">Acessórios</a>
         </div>
     </section>
-    <section>
-        <h2>As melhores ofertas estão aqui</h2>
-        <h3>Até 30% de desconto</h3>
-        <div>
-            <img src="../public/images/pexels-nao-triponez-129208.jpg" alt="">
+    <section class="layout-home container">
+        <div class="layout-imagens">
+            <h2>As melhores ofertas estão aqui<br>
+                Até 30% de desconto</h2>
+            <img src="../public/imgHome/tablet.jpg" alt="">
         </div>
-        <div>
-            <img src="../public/images/pexels-pavel-danilyuk-8001024.jpg" alt="">
-        </div>
-        <div>
-            <img src="../public/images/pexels-josh-sorenson-1334598.jpg" alt="">
-        </div>
-        <div>
-            <img src="../public/images/pexels-raka-miftah-4279153.jpg" alt="">
+        <div class="layout-imagens">
+            <img src="../public/imgHome/celular.png" alt="">
+            <img src="../public/imgHome/monitor.jfif" alt="">
+            <img src="../public/imgHome/watch.png" alt="">
         </div>
     </section>
-    
 </body>
+
 </html>
