--- a/views/home.html
+++ b/views/home.html
@@ -32,15 +32,20 @@
         </div>
     </section>
     <section class="layout-home container">
-        <div class="layout-imagens">
+        <div class="layout-oferta">
             <h2>As melhores ofertas estão aqui<br>
                 Até 30% de desconto</h2>
             <img src="../public/imgHome/tablet.jpg" alt="">
         </div>
         <div class="layout-imagens">
-            <img src="../public/imgHome/celular.png" alt="">
-            <img src="../public/imgHome/monitor.jfif" alt="">
-            <img src="../public/imgHome/watch.png" alt="">
+            <a href="/produtos">
+                <img class="produtos-home" src="../public/imgHome/celular.png" alt="">
+            </a>
+            <a href="/produtos"><img id="mon" class="produtos-home" src="../public/imgHome/monitor2.png" alt="">
+            </a>
+            <a href="produtos">
+                <img class="produtos-home" src="../public/imgHome/watch.png" alt="">
+            </a>
         </div>
     </section>
 </body>
